<resources>
    <string name="app_name">GiveAndTake</string>
    <string name="action_sign_in_short">הירשם</string>
    <string name="email">כתובת דואר אלקטרוני</string>
    <string name="btn_link_to_register">לא רשום? הירשם עכשיו!</string>
    <string name="btn_link_to_login">כבר רשום. הכנס אותי!</string>
    <string name="btn_forgot_password">שכחת סיסמא?</string>
    <string name="btn_login">התחבר</string>
    <string name="btn_explore">סייר</string>
    <string name="hint_email">כתובת דואר אלקטרוני</string>
    <string name="hint_password">סיסמא</string>
    <string name="hint_first_name">שם פרטי</string>
    <string name="hint_last_name">שם משפחה</string>
    <string name="hint_phone">מספר טלפון</string>
    <string name="enter_email">הזן כתובת מייל</string>
    <string name="enter_password">הכנס סיסמא</string>
    <string name="enter_firstName">הכנס שם פרטי</string>
    <string name="enter_lastName">הכנס שם משפחה</string>
    <string name="gender_female">נקבה</string>
    <string name="gender_male">זכר</string>
    <string name="enter_more_then_6_characters">הסיסמא קצרה מדי, הכנס מינימום 6 תוים</string>
    <string name="lbl_forgot_password">שכחת סיסמא?</string>
    <string name="forgot_password_msg">אנו צריכים את כתובת הדואר האלקטרוני שלך על מנת לשלוח לך סיסמא חדשה.</string>
    <string name="btn_reset_password">איפוס סיסמא</string>
    <string name="btn_back"><![CDATA[<< חזור]]></string>


    <string name="menu_explore">סייר</string>
    <string name="menu_full_account_info">החשבון שלי</string>
    <string name="menu_history">היסטוריה</string>
    <string name="menu_give_request">לתת</string>
    <string name="menu_take_request">לקחת</string>
    <string name="menu_header">מה תרצה לעשות?</string>
    <string name="menu_editUser">ערוך פרטי משתמש</string>
    <string name="menu_connect">צור קשר</string>
    <string name="balance">יתרה :</string>
    <string name="user_name">שם :</string>
    <string name="create_req_lable">צור בקשה</string>
    <string name="take">לקחת</string>
    <string name="give">לתת</string>
    <string name="match_details">פרטי התאמה </string>
    <string name="match_discription">תיאור:</string>
    <string name="create_meeting">צור מפגש</string>

    <string name="title_activity_temp">tempActivity</string>
    <string name="search_text_hint">הכנס טקסט לחיפוש</string>
    <string name="btn_search_text">חפש</string>
    <string name="new_notification_task">התראה חדשה</string>
    <string name="user_created">המשתמש נוצר</string>
    <string name="authentication_faild">ההזדהות נכשלה</string>

    <string name="invalid_phone">"מספר טלפון לא תקין"</string>
    <string name="invalid_full_name">שם מלא לא תקין</string>
    <string name="menu_logout">התנתק</string>
    <string name="enter_email_address">הכנס כתובת אימייל</string>
    <string name="reset_password_txt">נשלח מייל לאתחול הסיסמא</string>
    <string name="cannot_send_reset_email">מייל אתחול סיסמא לא נשלח</string>
    <string name="female_hebrew">נקבה</string>
    <string name="email_title">דואר אלקטרוני:</string>
    <string name="phone_title">טלפון:</string>
    <string name="gender_title">מין:</string>
    <string name="give_request_input_text">מה ברצונך לתת?</string>
    <string name="request_btn">בצע</string>
    <string name="take_request_input_text">מה ברצונך לקחת?</string>
    <string name="take_request_find_text_btn">סנן טקסט</string>
    <string name="confirm_meeting">אישור מפגש</string>
    <string name="giver_name_match">שם נותן השירות:</string>
    <string name="taker_name_match">שם מקבל השירות:</string>
    <string name="service_type_match">סוג השירות :</string>
    <string name="nav_my_services">השירותים שלי</string>
    <string name="start_service">התחל שירות</string>
    <string name="finish_service">סיים שירות</string>
    <string name="cancel_service">בטל שירות</string>
    <string name="edit_user_info_btn">בצע</string>
    <string name="handshakeActivity_handshakeTitle">לחיצת יד</string>
    <string name="handshakeActivity_serviceTitle">השירות:</string>
    <string name="handshakeProcessActivity_title">החלפה מתבצעת</string>
    <string name="fragmentLogin_info_button_text">i</string>
    <string name="fragmentMainScreen_balance_lable_text">יתרה נוכחית:</string>
    <string name="userMatchActivity_title">משתמשים מתאימים</string>
    <string name="serverId">917990523248-iq18cvbqbv2uju4sv37t46mv53mgdl6e.apps.googleusercontent.com</string>
    <string name="GiveOrTakeReq_findTextBtn">מצא תגיות</string>
    <string name="GiveOrTakeReq_afterSelectTags">שמירה</string>
    <string name="GiveOrTakeReq_viewTitle">הבקשה שלי</string>
    <string name="GiveOrTakeReq_inputTextHint">הקלד כאן</string>
    <string name="GiveOrTakeReq_discriptionTake">מה תרצה לקחת?</string>
    <string name="GiveOrTakeReq_discriptionGive">מה תרצה לתת?</string>
    <string name="GiveOrTakeReq_successMsg">הבקשה הושלמה</string>
    <string name="GiveOrTakeReq_noTagsMsg">לא נמצאו תגיות מתאימות</string>
    <string name="userProfile_phoneNote">*מספר הטלפון יפורסם בעת החלפת שירותים באישורך בלבד</string>
    <string name="btn_logout_text">התנתק</string>
    <string name="btnPhoneNum_text">יש להכניס מספר טלפון</string>
    <string name="phoneNum_InvalidInputErrMsg">המספר לא תקין</string>
    <string name="handshake_viewTitle">החלפת זמן</string>
    <string name="handshakeDiscription">תיאור ההחלפה</string>
    <string name="handshake_time">זמן ההחלפה בדקות</string>
    <string name="handshake_stepTitle">שלבים:</string>
    <string name="handshake_step1">שולח בקשה להחלפת זמן...</string>
    <string name="handshake_step2">ממתין לאישור המשתמש...</string>
    <string name="handshake_step3">לחץ על \'התחל החלפה\' וטיימר יחל לרוץ עבורכם.</string>
    <string name="handshake_startSessionBtn">התחל החלפה</string>
    <string name="GiveOrTakeAddTags">הוסף תגית +</string>
    <string name="handshakeProcessActivity_balance">יתרת הזמן שלך: </string>
    <string name="handshakeProcessActivity_time_passed">זמן שעבר: </string>
    <string name="incoming_session_request_description_headline">תיאור ההחלפה:</string>
    <string name="incoming_session_request_time_headline">זמן ההחלפה בדקות:</string>
    <string name="incoming_session_request_headline">בקשת החלפה</string>
    <string name="phone_request_headline">בקשת טלפון</string>


</resources>
