<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_full_account_info"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_full_account_info" />
        <item
            android:id="@+id/nav_give_request"
            android:icon="@drawable/ic_arrow_upward"
            android:title="@string/menu_give_request" />
        <item
            android:id="@+id/nav_take_request"
            android:icon="@drawable/ic_arrow_downward"
            android:title="@string/menu_take_request" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_edit_user_info"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_editUser" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_connect" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>