<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win10.giveandtake.UI.MatchActivity"
    >


    <TextView
        android:id="@+id/match_result_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_details"

        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:textSize="25dp"
        />
    <TextView
        android:id="@+id/user_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="פה יהיה שם משתמש של ההתאמה"
        android:layout_marginTop="60dp"
        android:layout_marginRight="80dp"/>


    <TextView
        android:id="@+id/match_discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_discription"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/match_discription_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="פה יהיה פרטי משתמש של ההתאמה"
        android:layout_marginTop="120dp"
        android:layout_marginRight="100dp"
        />


    <Button
        android:id="@+id/create_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_meeting"
        android:textSize="30dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="120dp"/>

</android.support.design.widget.CoordinatorLayout>
