<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_yellow_background"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/match_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape_old"
        android:orientation="vertical">

        <TextView
            android:id="@+id/match_result_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/match_details" />

        <LinearLayout
            android:id="@+id/giver_user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/giver_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:text="@string/giver_name_match"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/giver_user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/taker_user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taker_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/taker_name_match"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/taker_user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/service_description_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/service_description_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/service_type_match"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/service_description_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/start_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_old"
        android:text="@string/start_service"
        android:textSize="25dp" />
    <Button
        android:id="@+id/end_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_old"
        android:text="@string/finish_service"
        android:textSize="25dp" />
    <Button
        android:id="@+id/cancel_service_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_old"
        android:text="@string/cancel_service"
        android:textSize="25dp" />

</LinearLayout>