<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_take_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/take_request_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:hint="@string/take_request_input_text"
            android:maxLines="5"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/take_request_find_text_btn"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/take_request_find_text_btn"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/take_request_tags_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:numColumns="3"></GridView>


    <Button
        android:id="@+id/take_request_btn"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/request_btn"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
</LinearLayout>