<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_home_defult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/mini_user_info_layout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_shape_old"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/temp_user_image_100px" />

        <LinearLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:text="@string/user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_balance_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/balance"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/user_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/request_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
        android:id="@+id/request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="130dp"
        android:text="@string/create_req_lable"
            android:textColor="@android:color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:id="@+id/give_take_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_give"
                android:layout_width="126dp"
                android:layout_height="51dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_shape_old"
                android:text="@string/give"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_take"
                android:layout_width="125dp"
                android:layout_height="47dp"
                android:background="@drawable/button_shape_old"
                android:text="@string/take"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/temp_logo" />
    </LinearLayout>
</LinearLayout>