<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/full_user_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/temp_user_image_100px" />

    <LinearLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:background="@drawable/button_shape">

        <TextView
            android:id="@+id/user_name_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_name"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:background="@drawable/button_shape">

        <TextView
            android:id="@+id/user_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/balance"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/user_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_email_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:background="@drawable/button_shape">

        <TextView
            android:id="@+id/user_email_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_title"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/user_email_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:background="@drawable/button_shape">

        <TextView
            android:id="@+id/user_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone_title"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/user_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:background="@drawable/button_shape">

        <TextView
            android:id="@+id/user_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gender_title"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/user_gender_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>



</LinearLayout>